array.island.Island.scala.error
Erreur de compilation :
Island:8: error: ';' expected but '=' found.
      1 = 1
        ^